# gaming_reader

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build_exe.py  config.release.yaml  config.yaml  launcher.py  pyproject.toml  requirements.txt
game_text_reader/: __init__.py  __main__.py  capture.py  config.py  filter.py  hotkey.py  ocr.py  tts.py
tests/: test_config.py  test_filter.py  test_ocr.py  test_tts.py
